--- a/index.html
+++ b/index.html
@@ -13,6 +13,36 @@
     <title>Sizwe Mnothoza</title>
 </head>
 <body>
+    <main class="main" id="top">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll"
+        style="background-image: none; background-color: rgba(255, 255, 255, 0); transition: none 0s ease 0s;">
+            <div class="container">
+                <a class="navbar-brand d-inline-flex"href="#">
+                    <span class="text-1000 fs-0 fw-bold ms-2">{Sizwe Mnothoza}</span>
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto ml-auto mb-2 mb-lg-0">
+                        <li class="nav-item px-2">
+                            <a class="nav-link fw-medium active" aria-current="page" href="#about">.About( )</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link fw-medium" href="#skills">.Skils( )</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link fw-medium" href="#projects">.Projects( )</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link fw-medium" href="">.Let's Connect( )</a>
+                        </li>
+                    </ul>
+            </div>
+        </div>
+    </nav>
+    </main>
     <script src="assets/jquery/dist/jquery.min.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/feather.min.js.download"></script>
