adding the welcome section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 <body>
     <main class="main" id="top">
+        <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll"
-        style="background-image: none; background-color: rgba(255, 255, 255, 0); transition: none 0s ease 0s;">
+                style="background-image: none; background-color: rgba(255, 255, 255, 0); transition: none 0s ease 0s;">
             <div class="container">
                 <a class="navbar-brand d-inline-flex"href="#">
                     <span class="text-1000 fs-0 fw-bold ms-2">{Sizwe Mnothoza}</span>
@@ -39,10 +40,28 @@
                             <a class="nav-link fw-medium" href="">.Let's Connect( )</a>
                         </li>
                     </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+        <!-- Welcome section -->
+        <section id="welcome" class="py-11 bg-light-gradient border-bottom border-white border-5">
+            <div class="bg-holder overlay overlay-light"
+                style="background-image:url(assets/img/gallery/header-bg.png);background-size:cover;"></div>
+            <!--/.bg-holder-->
+            <div class="container">
+                <div class="row flex-center">
+                    <div class="col-12 mb-10">
+                        <div class="d-flex align-items-center flex-column">
+                            <h1 class="fs-3 fs-lg-7 fs-md-5 fw-bold"> Welcome to my website </h1>
+                            <h1 class="fw-normal mb-6">I am excited to shocase my skills and projects</h1>
+                            <a class="btn btn-lg btn-dark" href="#projects">View projects</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
     <script src="assets/jquery/dist/jquery.min.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/feather.min.js.download"></script>
