adding the about section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </div>
             </div>
         </nav>
+
         <!-- Welcome section -->
         <section id="welcome" class="py-11 bg-light-gradient border-bottom border-white border-5">
             <div class="bg-holder overlay overlay-light"
@@ -60,6 +61,51 @@
                 </div>
             </div>
         </section>
+
+        <!--About Section -->
+        <section id="about">
+            <div class="container">
+                <div class="row h-100 g-0">
+                    <div class="col-md-6">
+                        <div class="card card-span h-80 text-white">
+                            <img class="card-img h-80" src="img/IMG-20200424-WA0011.jpg"
+                                alt="Sizwe Mnothoza profile pic">
+                            <div class="card-img-overlay bg-dark-gradient">
+                                <div class="d-flex align-items-end justify-content-center h-100">
+                                        <path fill-rule="evenodd"
+                                            d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z">
+                                        </path>
+                                        </svg></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="bg-300 p-4 h-100 d-flex flex-column justify-content-center">
+                            <h4 class="text-800">Sizwe Mnothoza</h4>
+                            <h1 class="fw-semi-bold lh-sm fs-4 fs-lg-5 fs-xl-6 mb-4">Full Stack Developer</h1>
+                            <p class="mb-4" style="letter-spacing: 1.25px; text-align: justify;">I am a hard-working and trust worthy individual who enjoys working in a team as well as alone. My experience in the
+                            industry has thought me to be constantly learning new technologies, develop new skills and expand existing knowledge. As
+                            a result I am always eager to learn a new skill and gain the ability to teach others.</p>
+                             <div class="fa fa-phone mb-4"> 064 925 7264</div>
+                             <div class="fa fa-envelope mb-4"> sizwemorrismnothoza50@gmail.com</div>
+                             <div class="fa fa-twitter mb-4"> @sizwemnothoza</div>
+                             <div class="fa fa-linkedin mb-4"> Sizwe Mnothoza</div>
+                             <div class="fa fa-globe mb-4"> www.sizwemnothoza.co.za</div>
+
+                            <div class="d-grid gap-2 d-md-block">
+                                <a class="btn btn-lg btn-outline-dark"
+                                    href="#skills" role="button">View Skills 
+                                    &nbsp; &nbsp; <span class="fa fa-angle-right" ></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <script src="assets/jquery/dist/jquery.min.js"></script>
