adding project and connect sections

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link fw-medium" href="#projects">.Projects( )</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link fw-medium" href="">.Let's Connect( )</a>
+                            <a class="nav-link fw-medium" href="#connect">.Let's Connect( )</a>
                         </li>
                     </ul>
                 </div>
@@ -91,7 +91,6 @@
                              <div class="fa fa-envelope mb-4"> sizwemorrismnothoza50@gmail.com</div>
                              <div class="fa fa-twitter mb-4"> @sizwemnothoza</div>
                              <div class="fa fa-linkedin mb-4"> Sizwe Mnothoza</div>
-                             <div class="fa fa-globe mb-4"> www.sizwemnothoza.co.za</div>
 
                             <div class="d-grid gap-2 d-md-block">
                                 <a class="btn btn-lg btn-outline-dark"
@@ -109,7 +108,7 @@
         <section id="skills">
             <div class="container">
                 <div class="row h-100 py-1">
-                    <h2 style="text-align: center;" class="display-4 mb-4" style="color: #fff;">Skills</h2>
+                    <h2 style="text-align: center;" class="fw-normal mb-4" style="color: #fff;">Skills</h2>
 
                     <div class="col-md-6">
                         <h2 style="text-align: center;" >Front-End</h2>
@@ -346,7 +345,61 @@
             </div>
         </section>
 
+        <!-- Projects  -->
+        <section id="projects">
+            <div class="container mb-4">
+            <div class="row h-100 g-2 py-1">
+                <h2 style="text-align: center;" class="fw-normal mb-3">Projects</h2>
+                <div class="col-md-2">
 
+                </div>
+                <div class="col-md-4">
+                    <div class="card shadow-sm">
+                        
+                        <img src="img/2 Search 23.png" alt="">
+                        <div class="card-body">
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+                                This content is a little bit longer.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-dark">View</button>
+                                    <button type="button" class="btn btn-sm btn-dark">GitHub</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card shadow-sm">
+                        
+                        <img src="img/eThute.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+                                This content is a little bit longer.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-dark">View</button>
+                                    <button type="button" class="btn btn-sm btn-dark">GitHub</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+
+                </div>
+            </div>
+            </div>
+            <div class="container" style="text-align: center;">
+                <p>Like what you see?</p>
+                <!-- <a href="#" class="btn btn-dark" style="display: block;">Let's Connect</a> -->
+                <h1  id="connect" class="fw-normal mb-4">Let's Connect</h1>
+                <div class="fa fa-phone mb-4"> 064 925 7264</div>
+                    <div class="fa fa-envelope ml-2"> sizwemorrismnothoza50@gmail.com</div>
+                    <div class="fa fa-twitter ml-2"> @sizwemnothoza</div>
+                    <div class="fa fa-linkedin ml-2"> Sizwe Mnothoza</div>
+                </div>
+        </section>
     </main>
 
     <script src="assets/jquery/dist/jquery.min.js"></script>
